ocp/deployments/manifests/basic/deployment_number_service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: number-service
  labels: &labels
    app.kubernetes.io/name: number-service
    app.kubernetes.io/instance: number-service
    app.kubernetes.io/component: api
    app.kubernetes.io/part-of: microservies-demo
spec:
  replicas: 1
  selector:
    matchLabels: *labels
  template:
    metadata:
      labels: *labels
    spec:
      securityContext:
        runAsUser: 65535
        runAsGroup: 65535
      automountServiceAccountToken: false
      containers:
        - name: number-service
          image: ghcr.io/leonsteinhaeuser/rh-ocp-examples-number:main
          imagePullPolicy: Always
          ports:
            - containerPort: 8081
              name: http
              protocol: TCP
          resources:
            limits:
              cpu: 100m
              memory: 32Mi
            requests:
              cpu: 10m
              memory: 32Mi
          securityContext:
            runAsUser: 65535
            runAsGroup: 65535
            allowPrivilegeEscalation: false
            readOnlyRootFilesystem: true
            capabilities:
              drop:
                - all
