ocp/deployments/manifests/basic/deployment_status_service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: status-service
  labels: &labels
    app.kubernetes.io/name: status-service
    app.kubernetes.io/instance: status-service
    app.kubernetes.io/component: api
    app.kubernetes.io/part-of: microservices-demo
spec:
  replicas: 1
  selector:
    matchLabels: *labels
  template:
    metadata:
      labels: *labels
    spec:
      securityContext:
        runAsUser: 65535
        runAsGroup: 65535
      automountServiceAccountToken: false
      containers:
        - name: status-service
          image: ghcr.io/leonsteinhaeuser/rh-ocp-examples-status:main
          imagePullPolicy: Always
          ports:
            - containerPort: 8082
              name: http
              protocol: TCP
          resources:
            limits:
              cpu: 100m
              memory: 32Mi
            requests:
              cpu: 10m
              memory: 32Mi
          livenessProbe:
            httpGet:
              path: /healthz
              port: http
          readinessProbe:
            httpGet:
              path: /healthz
              port: http
          securityContext:
            runAsUser: 65535
            runAsGroup: 65535
            allowPrivilegeEscalation: false
            readOnlyRootFilesystem: true
            capabilities:
              drop:
                - all
