ocp/deployments/manifests/basic/service_number_service.yaml
apiVersion: v1
kind: Service
metadata:
  name: number-service
  labels: &labels
    app.kubernetes.io/name: number-service
    app.kubernetes.io/instance: number-service
    app.kubernetes.io/component: api
    app.kubernetes.io/part-of: microservies-demo
spec:
  ports:
    - port: 8081
      targetPort: http
      protocol: TCP
      name: http
  selector: *labels
