ocp/deployments/manifests/basic/service_status_service.yaml
apiVersion: v1
kind: Service
metadata:
  name: status-service
  labels: &labels
    app.kubernetes.io/name: status-service
    app.kubernetes.io/instance: status-service
    app.kubernetes.io/component: api
    app.kubernetes.io/part-of: microservices-demo
spec:
  ports:
    - port: 8082
      targetPort: http
      protocol: TCP
      name: http
  selector: *labels
