ocp/deployments/manifests/basic/service_view_service.yaml
apiVersion: v1
kind: Service
metadata:
  name: view-service
  labels: &labels
    app.kubernetes.io/name: view-service
    app.kubernetes.io/instance: view-service
    app.kubernetes.io/component: api
    app.kubernetes.io/part-of: microservices-demo
spec:
  ports:
    - port: 8080
      targetPort: http
      protocol: TCP
      name: http
  selector: *labels
