ocp/deployments/manifests/basic/route_view_service.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: view-service
  labels:
    app.kubernetes.io/name: view-service
    app.kubernetes.io/instance: view-service
    app.kubernetes.io/component: api
    app.kubernetes.io/part-of: microservies-demo
spec:
  host: view-service.localhost
  port:
    targetPort: http
  to:
    kind: Service
    name: view-service
    weight: 100
